@@ -3,6 +3,8 @@
 - fixed translation status color indicator to work correctly in case
   of plural entries
 - changed the official spelling from "poEdit" to "Poedit"
+- preserve old msgid records (#| msgid "...") when saving
+
 
 Version 1.3.7
 -------------
